--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       src="https://kit.fontawesome.com/8cb35ea804.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+
     <title>Vite + React</title>
   </head>
   <body>
